@@ -437,6 +437,8 @@ extern int opt_pure_intonation;
 extern int current_freq_table;
 extern int32 opt_drum_power;
 extern int opt_amp_compensation;
+extern int opt_realtime_priority;	/* interface/alsaseq_c.c */
+extern int opt_sequencer_ports;		/* interface/alsaseq_c.c */
 
 extern int play_midi_file(char *fn);
 extern void dumb_pass_playing_list(int number_of_files, char *list_of_files[]);
